--- a/templates/index.jade
+++ b/templates/index.jade
@@ -12,6 +12,6 @@ html(lang="en")
       
   body
     .container
-      img(src="/img/logo.jpg")
+      img(src="/img/cklogo.png")
       h1.title= title
       h3= text
