--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,72 @@
-.container img {
-	width: 200px;
+.preheader {
+  height: 224px;
+  margin-bottom: -1px;
+}
+.preheader .container {
+  height: inherit;
+  width: 980px;
+  background-image: url('/img/logo_arc_blue.png');
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
 
-.container h1,h3 {
-	margin-top: 80px;
+.container.main {
+  background: #FFF;
+  border: 20px solid white;
 }
 
-.container {
-	margin-top: 20px;
-	text-align: center;
+.preheader img {
+  margin-left: 250px;
+  margin-top: 25px;
+}
+.normalpage.preheader .container {
+  background-image: url('http://media.team254.com/homepage/skyline.png');
+}
+.normalpage.preheader {
+  height: 60px;
+}
+
+.navbar .nav {
+  margin: 0 -20px 0 0;
+}
+.navbar .navbar-inner {
+  min-width:900px;
+  font-weight: bold;
+}
+.navbar .nav > li > a {
+  padding: 9px 13px 11px;
+}
+.normalpage .brand img {
+  height: 40px;
+  margin-top: -2px;
+  float: left;
+}
+.normalpage .navbar {
+  float:left;
+  width:813px;
+  margin-left: 20px;
+}
+.normalpage .navbar-inner {
+  width: 813px;
+  min-width:813px;
+}
+.normalpage .navbar .nav > li > a {
+  padding: 9px 9px 11px 9px;
+}
+
+body {
+  background: #062f5a; /* Old browsers */
+  background: -moz-linear-gradient(top, #062f5a 1%, #062f5b 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#062f5a), color-stop(100%,#062f5b)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #062f5a 1%,#062f5b 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #062f5a 1%,#062f5b 100%); /* Opera11.10+ */
+  background: -ms-linear-gradient(top, #062f5a 1%,#062f5b 100%); /* IE10+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#062f5a', endColorstr='#062f5b',GradientType=0 ); /* IE6-9 */
+  background: linear-gradient(top, #062f5a 1%,#062f5b 100%); /* W3C */
+  background-repeat: no-repeat;
+
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
 }
