It's a work in progrgress...

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -6,65 +6,70 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='')
     meta(name='author', content='')
-    link(href='/css/bootstrap.css', rel='stylesheet')
+    link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/style.css', rel='stylesheet')
     style(type='text/css')
       body {
-      padding-top: 60px;
+      padding-top: 30px;
       padding-bottom: 40px;
       }
-    link(href='/css/bootstrap-responsive.css', rel='stylesheet')
+    //link(href='/css/bootstrap-responsive.css', rel='stylesheet')
     link(rel='apple-touch-icon-precomposed', sizes='144x144', href='/ico/apple-touch-icon-144-precomposed.png')
     link(rel='apple-touch-icon-precomposed', sizes='114x114', href='/ico/apple-touch-icon-114-precomposed.png')
     link(rel='apple-touch-icon-precomposed', sizes='72x72', href='/ico/apple-touch-icon-72-precomposed.png')
     link(rel='apple-touch-icon-precomposed', href='/ico/apple-touch-icon-57-precomposed.png')
     link(rel='shortcut icon', href='/ico/favicon.png')
   body
-    .navbar.navbar-inverse.navbar-fixed-top
-      .navbar-inner
-        .container
-          a.btn.btn-navbar(data-toggle='collapse', data-target='.nav-collapse')
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.brand(href='#')= short_title
-          .nav-collapse.collapse
-            ul.nav
-              li.active
-                a(href='#') Home
-              li
-                a(href='#about') About
-              li
-                a(href='#contact') Contact
-              li.dropdown
-                a.dropdown-toggle(href="#", data-toggle='dropdown') Teams 
-                  b.caret
-                ul.dropdown-menu
-                  li
-                    a(href='#') 35 - Unidentified
-                  li
-                    a(href='#') 36 - The Scrubs
-                  li
-                    a(href='#') 37 - Athena Rising
-                  li
-                    a(href='#') 38 - Vexellent
-                  li
-                    a(href='#') 39 - The Zip_Ties
-                  li.divider
-                  li.nav-header Partners
-                  li
-                    a(href='#') Youthville Detroit
-                  li
-                    a(href='#') Someone Else
-            form.navbar-form.pull-right
-              input.span2(type='text', placeholder='Email')
-              input.span2(type='password', placeholder='Password')
-              button.btn(type='submit') Sign in
     .preheader
       .container
         a(href="/")
           //img(src="/img/logo_arc_blue.jpg", alt="Cranbrook Robotics")
     .container.main
+      .navbar
+        .navbar-inner
+          .container
+            a.btn.btn-navbar(data-toggle='collapse', data-target='.nav-collapse')
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+            .nav-collapse.collapse
+              ul.nav
+                li.active
+                  a(href='#') Home
+                li
+                  a(href='#about') About
+                li
+                  a(href='#contact') Contact
+                li.dropdown
+                  a.dropdown-toggle(href="#", data-toggle='dropdown') VEX 
+                    b.caret
+                  ul.dropdown-menu
+                    li
+                      a(href='#') 35 - Unidentified
+                    li
+                      a(href='#') 36 - The Scrubs
+                    li
+                      a(href='#') 37 - Athena Rising
+                    li
+                      a(href='#') 38 - Vexellent
+                    li
+                      a(href='#') 39 - The Zip_Ties
+                    li.divider
+                    li.nav-header Partners
+                    li
+                      a(href='#') Youthville Detroit
+                    li
+                      a(href='#') Someone Else
+                li.dropdown
+                  a.dropdown-toggle(href="#", data-toggle='dropdown') FEX 
+                    b.caret
+                  ul.dropdown-menu
+                    li
+                      a(href='#') I Don't
+                    li
+                      a(href='#') Know Any
+                    li
+                      a(href='#') FTC Teams
       .hero-unit
         h1= header_text
         p
