--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,15 @@
+html {
+  min-height:100%;
+  min-width:980px;
+}
+
+.pull-center {
+	text-align: center;
+}
+
 .preheader {
-  height: 224px;
-  margin-bottom: -1px;
+  height: 150px;
+  margin-bottom: 10px;
 }
 .preheader .container {
   height: inherit;
@@ -8,6 +17,10 @@
   background-image: url('/img/logo_arc_blue.png');
   background-repeat: no-repeat;
   background-position: bottom;
+}
+
+.container {
+	width: 940px;
 }
 
 .container.main {
@@ -19,16 +32,15 @@
   margin-left: 250px;
   margin-top: 25px;
 }
+
 .normalpage.preheader .container {
-  background-image: url('http://media.team254.com/homepage/skyline.png');
+  background-image: url('#');
 }
+
 .normalpage.preheader {
   height: 60px;
 }
 
-.navbar .nav {
-  margin: 0 -20px 0 0;
-}
 .navbar .navbar-inner {
   min-width:900px;
   font-weight: bold;
@@ -36,6 +48,20 @@
 .navbar .nav > li > a {
   padding: 9px 13px 11px;
 }
+.normalpage .brand img {
+  height: 40px;
+  margin-top: -2px;
+  float: left;
+}
+
+.normalpage .navbar-inner {
+  width: 813px;
+  min-width:813px;
+}
+.normalpage .navbar .nav > li > a {
+  padding: 9px 9px 11px 9px;
+}
+
 .normalpage .brand img {
   height: 40px;
   margin-top: -2px;
