Changed 'FEX' to 'FTC'

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -61,7 +61,7 @@ html(lang='en')
                     li
                       a(href='#') Someone Else
                 li.dropdown
-                  a.dropdown-toggle(href="#", data-toggle='dropdown') FEX 
+                  a.dropdown-toggle(href="#", data-toggle='dropdown') FTC 
                     b.caret
                   ul.dropdown-menu
                     li
