--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,13 +82,13 @@ html {
 
 body {
   background: #062f5a; /* Old browsers */
-  background: -moz-linear-gradient(top, #062f5a 1%, #062f5b 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#062f5a), color-stop(100%,#062f5b)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #062f5a 1%,#062f5b 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #062f5a 1%,#062f5b 100%); /* Opera11.10+ */
-  background: -ms-linear-gradient(top, #062f5a 1%,#062f5b 100%); /* IE10+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#062f5a', endColorstr='#062f5b',GradientType=0 ); /* IE6-9 */
-  background: linear-gradient(top, #062f5a 1%,#062f5b 100%); /* W3C */
+  background: -moz-linear-gradient(top, #062f5a 1%, #0f4091 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#062f5a), color-stop(100%,#0f4091)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #062f5a 1%,#0f4091 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #062f5a 1%,#0f4091 100%); /* Opera11.10+ */
+  background: -ms-linear-gradient(top, #062f5a 1%,#0f4091 100%); /* IE10+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#062f5a', endColorstr='#0f4091',GradientType=0 ); /* IE6-9 */
+  background: linear-gradient(top, #062f5a 1%,#0f4091 100%); /* W3C */
   background-repeat: no-repeat;
 
   min-height: 100%;
